# hello-cli-starter

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/hello_cli/: main.py
tests/: test_main.py
